--- a/OLFFI/Base.lproj/Main.storyboard
+++ b/OLFFI/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -91,13 +91,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ceI-Xt-IGG" userLabel="Brand">
                                 <rect key="frame" x="0.0" y="64" width="600" height="377"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="I2u-Zs-zVC" userLabel="Logo">
-                                        <rect key="frame" x="210" y="158" width="180" height="62"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="180" id="09V-et-PUa"/>
-                                            <constraint firstAttribute="height" constant="62" id="qe4-o8-85c"/>
-                                        </constraints>
-                                    </imageView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Online Film Financing" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="dNa-Sz-EZ8">
                                         <rect key="frame" x="0.0" y="228" width="600" height="40"/>
                                         <constraints>
@@ -107,6 +100,13 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="I2u-Zs-zVC" userLabel="Logo">
+                                        <rect key="frame" x="210" y="158" width="180" height="62"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="180" id="09V-et-PUa"/>
+                                            <constraint firstAttribute="height" constant="62" id="qe4-o8-85c"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -374,24 +374,6 @@
             </objects>
             <point key="canvasLocation" x="485" y="-265"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="son-bq-nZk">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5gT-rK-xCn" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="usS-ja-7TH">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="FYd-47-OFs" kind="relationship" relationship="rootViewController" id="BNX-2H-oEK"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0Y1-Bc-vFs" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="351" y="-1043"/>
-        </scene>
         <!--Sign In View Controller-->
         <scene sceneID="WkJ-Y4-A6O">
             <objects>
@@ -511,9 +493,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="background" width="492" height="570"/>
+        <image name="background" width="311" height="552"/>
         <image name="linkedin" width="52" height="41"/>
-        <image name="logo" width="242" height="88"/>
+        <image name="logo" width="327" height="100"/>
     </resources>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
