Added all http query with Json deserialization Added all searchable list view with redirect to proper web page Added all redirect in menu appart from settings
TODO:
----------
Need to do proper cell with more information
Make logo work in menu title
Add setting button + settings redirect
Make proper buttons design in home menu with icons
Add titles in other redirect

--- a/OLFFI/Base.lproj/Main.storyboard
+++ b/OLFFI/Base.lproj/Main.storyboard
@@ -197,6 +197,9 @@
                                     <color key="titleColor" red="1" green="0.25098040700000002" blue="0.50588238240000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Tmt-92-JFL" kind="show" id="6CJ-82-phh"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9KS-pO-eHs" userLabel="Button 3">
                                 <rect key="frame" x="15" y="275" width="130" height="132"/>
@@ -204,6 +207,9 @@
                                     <color key="titleColor" red="1" green="0.25098040700000002" blue="0.50588238240000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
+                                <connections>
+                                    <segue destination="vD6-0Y-rxz" kind="show" id="JyX-WP-6Uw"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftF-Ew-dI2" userLabel="Button 4">
                                 <rect key="frame" x="160" y="275" width="129" height="132"/>
@@ -278,7 +284,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rNT-3o-034" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3600" y="-1044.7183098591549"/>
+            <point key="canvasLocation" x="3881" y="-1043"/>
         </scene>
         <!--Search Table View Controller-->
         <scene sceneID="6tX-bl-cYd">
@@ -309,7 +315,38 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f6r-bh-mtK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4455" y="-1045"/>
+            <point key="canvasLocation" x="4736" y="-1044"/>
+        </scene>
+        <!--Country Table View Controller-->
+        <scene sceneID="XDS-QM-kZw">
+            <objects>
+                <tableViewController id="Tmt-92-JFL" customClass="CountryTableViewController" customModule="OLFFI" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="oh9-AC-nDz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="j1o-MD-Ocr">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j1o-MD-Ocr" id="kJK-8s-nWB">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Tmt-92-JFL" id="hZh-No-sMA"/>
+                            <outlet property="delegate" destination="Tmt-92-JFL" id="tCx-fv-4aa"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <segue destination="ltq-JK-nXc" kind="show" identifier="goto_web" id="h1r-TC-PAA"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PM2-rC-t0Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3156" y="-247"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="djp-G3-joE">
@@ -369,7 +406,38 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D2t-y7-uC6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3649" y="-249"/>
+            <point key="canvasLocation" x="3930" y="-247"/>
+        </scene>
+        <!--Coproduction Treaty Table View Controller-->
+        <scene sceneID="nNz-of-uuc">
+            <objects>
+                <tableViewController id="vD6-0Y-rxz" customClass="CoproductionTreatyTableViewController" customModule="OLFFI" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="vu7-rJ-ZJD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="nAW-18-PzP">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nAW-18-PzP" id="hF6-zd-bQN">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="vD6-0Y-rxz" id="UCF-ik-F3D"/>
+                            <outlet property="delegate" destination="vD6-0Y-rxz" id="4hf-lp-FYG"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <segue destination="ltq-JK-nXc" kind="show" identifier="goto_web" id="PGh-J5-abQ"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H0i-Zx-Ayr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4706" y="-247"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="18A-5w-eAr">
@@ -669,7 +737,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S0k-Bd-8zd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2602.5" y="-1044.7183098591549"/>
+            <point key="canvasLocation" x="2884" y="-1043"/>
         </scene>
     </scenes>
     <resources>
@@ -678,7 +746,7 @@
         <image name="logo" width="163" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="UGw-9w-bjc"/>
+        <segue reference="PGh-J5-abQ"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
