added settings button

--- a/OLFFI/Base.lproj/Main.storyboard
+++ b/OLFFI/Base.lproj/Main.storyboard
@@ -165,24 +165,24 @@
                         <viewControllerLayoutGuide type="top" id="z1J-PR-GlU"/>
                         <viewControllerLayoutGuide type="bottom" id="Gh4-kp-Nzt"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="eAG-jE-2aJ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <view key="view" contentMode="scaleToFill" misplaced="YES" id="eAG-jE-2aJ">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="63i-HP-hge">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find funding for your project!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ew9-Lp-yks">
                                 <rect key="frame" x="15" y="64" width="290" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Rhu-7e-lIn"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Yu-jK-hw6" userLabel="Button Search">
-                                <rect key="frame" x="15" y="129" width="130" height="131"/>
+                                <rect key="frame" x="15" y="129" width="130" height="110"/>
                                 <state key="normal" title="Search">
                                     <color key="titleColor" red="1" green="0.25098040700000002" blue="0.50588238240000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -192,7 +192,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yvF-Dm-KpN" userLabel="Button 2">
-                                <rect key="frame" x="160" y="129" width="129" height="131"/>
+                                <rect key="frame" x="160" y="129" width="129" height="110"/>
                                 <state key="normal" title="Country">
                                     <color key="titleColor" red="1" green="0.25098040700000002" blue="0.50588238240000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -202,7 +202,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9KS-pO-eHs" userLabel="Button 3">
-                                <rect key="frame" x="15" y="275" width="130" height="132"/>
+                                <rect key="frame" x="15" y="254" width="130" height="110"/>
                                 <state key="normal" title="Coproduction">
                                     <color key="titleColor" red="1" green="0.25098040700000002" blue="0.50588238240000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -212,7 +212,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftF-Ew-dI2" userLabel="Button 4">
-                                <rect key="frame" x="160" y="275" width="129" height="132"/>
+                                <rect key="frame" x="160" y="254" width="129" height="110"/>
                                 <state key="normal" title="Calendar">
                                     <color key="titleColor" red="1" green="0.25098040700000002" blue="0.50588238240000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -222,7 +222,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UgO-kz-cRo" userLabel="Button 5">
-                                <rect key="frame" x="15" y="422" width="130" height="131"/>
+                                <rect key="frame" x="15" y="379" width="130" height="110"/>
                                 <state key="normal" title="Publication">
                                     <color key="titleColor" red="1" green="0.25098040700000002" blue="0.50588238240000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -232,7 +232,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zPZ-XP-YM3" userLabel="Button 6">
-                                <rect key="frame" x="160" y="422" width="129" height="131"/>
+                                <rect key="frame" x="160" y="379" width="129" height="110"/>
                                 <state key="normal" title="Compare">
                                     <color key="titleColor" red="1" green="0.25098040700000002" blue="0.50588238240000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -280,7 +280,17 @@
                             <constraint firstItem="63i-HP-hge" firstAttribute="centerY" secondItem="eAG-jE-2aJ" secondAttribute="centerY" id="ybi-Jl-dvC"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="cxp-Q4-7jW"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="cxp-Q4-7jW">
+                        <barButtonItem key="rightBarButtonItem" title="Settings" id="rcs-jl-z1b">
+                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <connections>
+                                <action selector="onPressedButtonSettings:" destination="wl1-ZY-Wdc" id="EW7-xO-b8j"/>
+                                <segue destination="ltq-JK-nXc" kind="show" identifier="goto_settings" id="OEJ-kn-nlz"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rNT-3o-034" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -290,8 +300,8 @@
         <scene sceneID="6tX-bl-cYd">
             <objects>
                 <tableViewController id="3Zj-bP-HWq" customClass="SearchTableViewController" customModule="OLFFI" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="222" sectionHeaderHeight="28" sectionFooterHeight="28" id="NbC-IJ-Lu4">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="222" sectionHeaderHeight="28" sectionFooterHeight="28" id="NbC-IJ-Lu4">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="0.79660560344827591" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -405,8 +415,8 @@
         <scene sceneID="XDS-QM-kZw">
             <objects>
                 <tableViewController id="Tmt-92-JFL" customClass="CountryTableViewController" customModule="OLFFI" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="oh9-AC-nDz">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="oh9-AC-nDz">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -442,22 +452,22 @@
                         <viewControllerLayoutGuide type="top" id="i41-Ce-vmV"/>
                         <viewControllerLayoutGuide type="bottom" id="A2x-qU-h8T"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Ueu-K1-cNz">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <view key="view" contentMode="scaleToFill" misplaced="YES" id="Ueu-K1-cNz">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAP-fg-b65" userLabel="WebViewContainer">
-                                <rect key="frame" x="0.0" y="45" width="320" height="523"/>
+                                <rect key="frame" x="0.0" y="45" width="320" height="459"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FMW-9b-0Fn" userLabel="ViewLoading">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="10e-3S-ttY" userLabel="Background">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                                     </imageView>
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="pa3-xA-Emn">
-                                        <rect key="frame" x="150" y="274" width="20" height="20"/>
+                                        <rect key="frame" x="150" y="242" width="20" height="20"/>
                                         <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </activityIndicatorView>
                                 </subviews>
@@ -499,8 +509,8 @@
         <scene sceneID="nNz-of-uuc">
             <objects>
                 <tableViewController id="vD6-0Y-rxz" customClass="CoproductionTreatyTableViewController" customModule="OLFFI" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="138" sectionHeaderHeight="28" sectionFooterHeight="28" id="vu7-rJ-ZJD">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="138" sectionHeaderHeight="28" sectionFooterHeight="28" id="vu7-rJ-ZJD">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -857,9 +867,10 @@
             <objects>
                 <navigationController storyboardIdentifier="MainNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="nf4-gL-4q0" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aEH-94-XSj">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="aEH-94-XSj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.98431372549019602" green="0.93333333333333335" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="6g4-cJ-doK">
@@ -882,7 +893,7 @@
         <image name="logo" width="163" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="PGh-J5-abQ"/>
+        <segue reference="OEJ-kn-nlz"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
